<resources>
    <string name="app_name">QuickCart</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="title_register">SignUp</string>
    <string name="title_guest">Guest</string>
    <string name="title_google">Google</string>
    <string name="text_login_frag">Or Login With</string>
    <string name="text_login_forget_frag">Forget Your Password? Recovery it</string>
    <string name="title_password">Password</string>
    <string name="title_email">Email</string>
    <string name="title_name">Name</string>
    <string name="title_repeat_password">Repeat password</string>
    <string name="title_welcome">Welcome to QuickCart</string>
    <string name="title_eslogan">\"Everything, fast. Your purchase instantly\".</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_EmptyCart">Your Cart is empty</string>
    <string name="title_MyCart">My Cart</string>
    <string name="title_Order_Summary">Order Summary</string>
    <string name="title_Total_Tax">Total Tax</string>
    <string name="title_guion">-</string>
    <string name="title_Subtotal">Subtotal</string>
    <string name="title_Delivery">Delivery</string>
    <string name="title_Total">Total</string>
    <string name="title_Information">Information</string>
    <string name="title_Delivery_address">Your Delivery Address</string>
    <string name="title_Address">Address</string>
    <string name="title_Payment_Method">Payment Method</string>
    <string name="title_Cash">Cash</string>
    <string name="title_Order_now">Order now</string>
    <string name="title_title_product">title</string>
    <string name="title_zero">0</string>
    <string name="title_4.0">4.0</string>
    <string name="title_Rating">Rating</string>
    <string name="title_10">10</string>
    <string name="title_Review">Review</string>
    <string name="title_description">Description</string>
    <string name="title_Buy_now">Buy now</string>
    <string name="title_Welcome_home">Welcome</string>
    <string name="title_User_name">User name</string>
    <string name="title_1">10</string>
    <string name="title_Search_for_anything...">Search for anything...</string>
    <string name="title_discount_technology">20% discount on technology!</string>
    <string name="title_Categories">Categories</string>
    <string name="title_Electronics">Electronics</string>
    <string name="title_Clothes">Clothes</string>
    <string name="title_Home_hogar">Home</string>
    <string name="title_Beauty">Beauty</string>
    <string name="title_View_all">View all</string>
    <string name="title_Popular_product">Popular product</string>
    <string name="title_See_all">See all</string>
    <string name="title_Edit">Edit</string>
    <string name="title_plus">+</string>
    <string name="title_Language">Language</string>
    <string name="title_MyProfile">My Profile</string>
    <string name="title_Telephone">Telephone</string>
    <string name="title_forget_password">Oh, no! I forgot</string>
    <string name="title_text_forgot_password">Enter your email and we\'ll send you a link to change a new password.</string>
    <string name="title_forget_account">Don\'t have an account ?</string>
    <string name="title_forgot">Forgot Password</string>
    <string name="logout_text">Logout</string>
    <string name="title_about_us">About us</string>
    <string name="title_all_products">All products</string>
    <string name="title_acept">Accept</string>
    <string name="title_error_log">Sorry, we were unable to log in with the credentials you provided. Please verify that your email address and password are correct. If you have forgotten your password, please use the \"Recover Password\" option to reset it.</string>
    <string name="title_Error">❌ Error</string>
    <string name="title_error_name_required">Name required</string>
    <string name="title_error_invalid_email">Email required</string>
    <string name="title_error_invalid_password">The password must be at least 6 characters long</string>
    <string name="title_error_password_mismatch">The password must be at least 6 characters long</string>
    <string name="title_error_phone_required">Phone required</string>
    <string name="price_format">$%d</string>
    <string name="prefs_file" translatable="false">com.raul.quickcart.PREFERENCE_FILE_KEY</string>
    <string name="title_acept_and_return">Accept and return</string>
    <string name="title_descripcion_about">🛒 Welcome to QuickCart! 🚀\nAt QuickCart, we\'re here to make your online shopping experience fast, easy and super fun! 💫\n💡 What makes us so special? Here we tell you:\n📱 Seamless user experience: Our mobile app is designed to make browsing smooth and find everything you need with just a few taps.\n🔒 Security first: You can shop with peace of mind thanks to our secure payment system and options like Google Pay.\n🎁 Special offers: Stay on top of the latest promotions and launches with our personalised notifications - never miss a single bargain! 💸\n👨‍💼 Personalised profile: Have it your way. Adjust your preferences, from language to dark mode, and manage your wish list to make your shopping even more exciting. 🌟\nInfinite variety: From tech to fashion, we have everything you need and more. Our inventory is intuitively organised so you\'ll find what you\'re looking for in an instant.\n💬 Detailed information: If you have questions, we\'ve got answers! Each product has its own dedicated page with details, reviews and ratings to help you make the best decision.\n🌐 Reliable infrastructure: With QuickCart, you can rely on a robust and scalable platform backed by Firebase Cloud.\nIn short, at QuickCart we are committed to providing you with an online shopping experience that is fast, easy and super fun! Join the online shopping revolution today and find out why QuickCart is your best choice! 🚀🛒\nThank you for choosing QuickCart as your shopping destination of choice! 💙</string>
    <string name="title_dark_mode">Dark mode</string>
    <string name="title_mode_light">Light mode</string>
    <string name="default_web_client_id" translatable="false">AIzaSyBdjlX2Nccogv6Xsi_y_1Op49SpZIDqcQ0</string>
    <string name="title_check_all">Check the fields, there may be some that are not filled in.</string>
    <string name="title_Spanish">Spanish</string>
    <string name="title_English">English</string>
    <string name="title_Newsletter">Newsletter</string>
    <string name="title_Choose_a_language">Choose a language:</string>
    <string name="title_note_profile_langua">🌟 We are dedicated to improving our app and adding support for a wider range of languages in future updates. You have nothing to worry about, as you will still be able to enjoy all the features regardless of your language of choice. We appreciate your patience and continued support - let\'s go into the future together! 🚀</string>
    <string name="title_success">Password reset successful! Please check your email.</string>
    <string name="title_system">System</string>
    <string name="title_alert_cart">🛒 Cart</string>
    <string name="title_add_cart_product">Product has been successfully added to your cart , please check your cart.</string>
    <string name="currency" translatable="false">%.2f €</string>
    <string name="title_Alphabetically">Alphabetically</string>
    <string name="title_Cheaper_products">Cheap</string>
    <string name="title_Popular_chip">Popular</string>
    <string name="title_share_product">Share Product</string>
    <string name="title_add_to_cart">Add to Cart</string>
    <string name="discount_20_off">20%</string>
    <string name="title_Private_area">Private area</string>
    <string name="title_address">Enter your address ...</string>
    <string name="title_save_address">Save address</string>
    <string name="title_Payments_datails">Payments datails</string>
    <string name="title_Card_number">Card number</string>
    <string name="title_Month_Year">Month/Year</string>
    <string name="title_CVV">CVV</string>
    <string name="title_save_credit_card">Save credit card</string>
    <string name="title_change_card">Add a credit card by clicking on the button</string>
    <string name="title_Form_address">Address submission form</string>
    <string name="title_Shipping_addresses">Shipping addresses</string>
    <string name="title_Form_card">Credit card form</string>
    <string name="title_Card_details">Credit card details</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_emptyMessageCreditCard">No credit card</string>
    <string name="title_emptyMessageAddress">No addresses</string>
    <string name="title_edit_address">Address editing form</string>
    <string name="title_edit_credit_card">Credit card editing form</string>
    <string name="title_confirm_delete">⚠️ Confirmation of deletion</string>
    <string name="msg_confirm_delete">Do you wish to execute this action?</string>
    <string name="title_user_not_logged_in">You need to login or register.</string>
    <string name="address_added_success">Address added correctly</string>
    <string name="credit_card_added_success">Credit card successfully added</string>
    <string name="title_success_add">✅ Confirmation</string>
    <string name="address_deleted_success">Address deleted correctly.</string>
    <string name="credit_card_deleted_success">Credit card successfully removed.</string>
    <string name="credit_card_updated_success">The credit card information has been updated correctly.</string>
    <string name="address_updated_success">The address information has been updated correctly.</string>
    <string name="credit_card_set_default_success">It established itself as the leading credit card.</string>
    <string name="address_set_default_success">It consolidated its position as the main directorate.</string>
    <string name="invalid_credit_card_details">Check the fields, there may be empty fields or missing characters.</string>
    <string name="invalid_card_number">Error minimum 16 numbers credit card</string>
    <string name="invalid_cvv">"Error minimum 3 numbers "</string>
    <string name="invalid_expiry_date">Error date, month / year</string>
    <string name="no_default_address">No address assigned</string>
    <string name="no_default_credit_card">No credit card assigned</string>
    <string name="order_confirmation">🎉 Congratulations!!</string>
    <string name="order_success_message">Congratulations, your order is on its way, it will arrive in 2 to 3 days. Thank you for your confidence.</string>
    <string name="title_notice">ℹ️ Information</string>
    <string name="function_not_implemented">This function is not yet implemented, it will be implemented in the next update.</string>
    <string name="warning_no_address_no_credit_card">⚠️  No delivery address or credit card assigned.</string>
    <string name="warning_no_address">⚠️  No delivery address assigned.</string>
    <string name="warning_no_credit_card">⚠️  No credit card assigned.</string>
</resources>