<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_Card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_Month_Year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextExpiry"
            android:layout_width="match_parent"
            android:maxLength="5"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_CVV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
